[gd_scene load_steps=17 format=3 uid="uid://bxolodkigvj0m"]

[ext_resource type="Script" path="res://Scenes/mini_games/blooms_tax/blooms_tax_game.gd" id="1_lu4bo"]
[ext_resource type="PackedScene" uid="uid://b5lhwjd1itais" path="res://Clickables/drag_and_drop/drop.tscn" id="2_5m88u"]
[ext_resource type="Texture2D" uid="uid://bmh7laikfh860" path="res://Clickables/static_scene_btn/Sprites/Room_5_Assests/BloomsTaxTrans.png" id="2_jr6vx"]
[ext_resource type="PackedScene" uid="uid://bjqdr74ju46mx" path="res://Clickables/drag_and_drop/drag.tscn" id="4_bw5tn"]
[ext_resource type="Script" path="res://Scenes/mini_games/blooms_tax/blooms_drop.gd" id="4_hl1ha"]
[ext_resource type="Texture2D" uid="uid://c7427imjacdaf" path="res://Clickables/static_scene_btn/Sprites/Room_5_Assests/CreateBlooms.png" id="6_1bn1f"]
[ext_resource type="Texture2D" uid="uid://cerxfs6fnd282" path="res://Clickables/static_scene_btn/Sprites/Room_5_Assests/EvaluateBlooms.png" id="7_fiaqf"]
[ext_resource type="Texture2D" uid="uid://l3vqo2rsiqcw" path="res://Clickables/static_scene_btn/Sprites/Room_5_Assests/AnalyzeBlooms.png" id="8_br1ip"]
[ext_resource type="Texture2D" uid="uid://vxe44o6orbyh" path="res://Clickables/static_scene_btn/Sprites/Room_5_Assests/ApplyBlooms.png" id="9_sk0kv"]
[ext_resource type="Texture2D" uid="uid://cbbehvgbe1bs" path="res://Clickables/static_scene_btn/Sprites/Room_5_Assests/UnderstandBlooms.png" id="10_0fgqw"]
[ext_resource type="Texture2D" uid="uid://baje00i3r7hc5" path="res://Clickables/static_scene_btn/Sprites/Room_5_Assests/RememberBlooms.png" id="11_yr4mb"]
[ext_resource type="Texture2D" uid="uid://dcm6p18p7lslf" path="res://Assets/Sprites/generic_items/genericItem_color_160.png" id="12_gkd27"]

[sub_resource type="SystemFont" id="SystemFont_qoytp"]

[sub_resource type="LabelSettings" id="LabelSettings_fbmun"]
font = SubResource("SystemFont_qoytp")
font_size = 14
font_color = Color(0.917647, 0.917647, 0.917647, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_guecy"]

[sub_resource type="LabelSettings" id="LabelSettings_jblt5"]
font = SubResource("FontVariation_guecy")
font_size = 10
font_color = Color(0.917647, 0.917647, 0.917647, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="blooms_tax_game" type="Node2D"]
script = ExtResource("1_lu4bo")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_top = 130.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0194873
anchor_top = 0.0272906
anchor_right = 0.963846
anchor_bottom = 0.995712
offset_left = 51.4157
offset_top = -11.9261
offset_right = 51.4156
offset_bottom = -11.926
color = Color(0.882353, 0.45098, 0.737255, 1)
metadata/_edit_use_anchors_ = true

[node name="BloomsTaxTrans" type="Sprite2D" parent="."]
position = Vector2(722.875, 566.5)
scale = Vector2(1.69153, 1.7416)
texture = ExtResource("2_jr6vx")

[node name="CreateDropSpot" parent="." node_paths=PackedStringArray("drag_partner") instance=ExtResource("2_5m88u")]
offset_left = 632.0
offset_top = 210.0
offset_right = 819.0
offset_bottom = 281.0
script = ExtResource("4_hl1ha")
drag_partner = NodePath("../CreateDrag")

[node name="EvaluateDropSpot" parent="." node_paths=PackedStringArray("drag_partner") instance=ExtResource("2_5m88u")]
offset_left = 623.0
offset_top = 328.0
offset_right = 824.0
offset_bottom = 398.0
script = ExtResource("4_hl1ha")
drag_partner = NodePath("../EvaluateDrag")

[node name="AnalyzeDropSpot" parent="." node_paths=PackedStringArray("drag_partner") instance=ExtResource("2_5m88u")]
offset_left = 622.0
offset_top = 436.0
offset_right = 823.0
offset_bottom = 523.0
script = ExtResource("4_hl1ha")
drag_partner = NodePath("../AnalyzeDrag")

[node name="ApplyDropSpot" parent="." node_paths=PackedStringArray("drag_partner") instance=ExtResource("2_5m88u")]
offset_left = 610.0
offset_top = 560.0
offset_right = 829.0
offset_bottom = 648.0
script = ExtResource("4_hl1ha")
drag_partner = NodePath("../ApplyDrag")

[node name="UnderstandDropSpot" parent="." node_paths=PackedStringArray("drag_partner") instance=ExtResource("2_5m88u")]
offset_left = 590.0
offset_top = 699.0
offset_right = 835.0
offset_bottom = 803.0
script = ExtResource("4_hl1ha")
drag_partner = NodePath("../UnderstandDrag")

[node name="RememberDropSpot" parent="." node_paths=PackedStringArray("drag_partner") instance=ExtResource("2_5m88u")]
offset_left = 589.0
offset_top = 846.0
offset_right = 868.0
offset_bottom = 953.0
script = ExtResource("4_hl1ha")
drag_partner = NodePath("../RememberDrag")

[node name="CreateDrag" parent="." instance=ExtResource("4_bw5tn")]
offset_left = 1450.0
offset_top = 197.0
offset_right = 1726.0
offset_bottom = 300.0
texture = ExtResource("6_1bn1f")

[node name="EvaluateDrag" parent="." instance=ExtResource("4_bw5tn")]
offset_left = 1455.0
offset_top = 325.0
offset_right = 1721.0
offset_bottom = 428.0
texture = ExtResource("7_fiaqf")

[node name="AnalyzeDrag" parent="." instance=ExtResource("4_bw5tn")]
offset_left = 1458.0
offset_top = 458.0
offset_right = 1727.0
offset_bottom = 558.0
texture = ExtResource("8_br1ip")

[node name="ApplyDrag" parent="." instance=ExtResource("4_bw5tn")]
offset_left = 1470.0
offset_top = 599.0
offset_right = 1738.0
offset_bottom = 702.0
texture = ExtResource("9_sk0kv")

[node name="UnderstandDrag" parent="." instance=ExtResource("4_bw5tn")]
offset_left = 1477.0
offset_top = 723.0
offset_right = 1742.0
offset_bottom = 824.0
texture = ExtResource("10_0fgqw")

[node name="RememberDrag" parent="." instance=ExtResource("4_bw5tn")]
offset_left = 1487.0
offset_top = 854.0
offset_right = 1750.0
offset_bottom = 956.0
texture = ExtResource("11_yr4mb")

[node name="CheckWinButton" type="TextureButton" parent="."]
offset_left = 234.0
offset_top = 419.0
offset_right = 274.0
offset_bottom = 459.0
scale = Vector2(1.9859, 1.88055)
texture_normal = ExtResource("12_gkd27")

[node name="Label" type="Label" parent="CheckWinButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.53035
anchor_top = -2.8582
anchor_right = 3.48225
anchor_bottom = -0.113043
offset_right = -111.504
offset_bottom = -40.8065
scale = Vector2(2.01367, 1.68011)
text = "Complete the
Bloom's Taxonomy
diagram"
label_settings = SubResource("LabelSettings_fbmun")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="CheckWinButton"]
layout_mode = 0
anchor_left = -1.63654
anchor_top = 1.16987
anchor_right = 2.54349
anchor_bottom = 2.69001
offset_right = -85.2012
offset_bottom = -28.8055
scale = Vector2(2.03904, 1.90017)
text = "Check
Answer"
label_settings = SubResource("LabelSettings_jblt5")
horizontal_alignment = 1

[connection signal="pressed" from="CheckWinButton" to="." method="_on_check_win_button_pressed"]
